--- a/css/styles.css
+++ b/css/styles.css
@@ -477,3 +477,33 @@ letter-spacing: 0.02em;
 color:var(--primary-text-color);
 
 }
+
+/* Modal window */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.modal {
+    position: absolute;
+    width: 408px;
+        height: 584px;
+        left: 516px;
+        top: 80px;
+        background: #FCFCFC;
+        border-radius: 4px; 
+}
+
+.modal-close-btn {
+    position: absolute;
+        width: 24px;
+        height: 24px;
+        left:
+        top: 
+}
+
+.modal-close-icon {}
