--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --bg-button: #4D5AE5;
     --bg-team:#F4F4FD; 
     --logo-footer: #F4F4FD;
+    --function-direction: 250ms cubic-bezier(0.4, 0, 0.2, 1);
  } 
 body{
     font-family: 'Roboto', sans-serif;
@@ -485,25 +486,59 @@ color:var(--primary-text-color);
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity var(--function-direction), visibility var(--function-direction) ;
 
 }
 
 .modal {
     position: absolute;
     width: 408px;
-        height: 584px;
-        left: 516px;
-        top: 80px;
+        min-height: 576px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, 50%)scale(1);
         background: #FCFCFC;
         border-radius: 4px; 
+        transition: transform var(--function-direction);
+
+  
+}
+.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
 }
 
 .modal-close-btn {
     position: absolute;
         width: 24px;
         height: 24px;
-        left:
-        top: 
+        right: 24px;
+        top: 24px;
+        padding: 0;
+        border-radius: 50%;
+        background-color:#E7E9FC;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: background-color var(--function-direction),border var(--function-direction);
+    
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus{
+    background-color: #404BBF;
+    border: none;
+
+}
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon{
+    fill: #FFFFFF;
 }
 
-.modal-close-icon {}
+.modal-close-icon {
+    transition: fill var(--function-direction);
+}
